@startuml

skinparam classAttributeIconSize 0
left to right direction

class ApplicationPOT{
    +getInstance()
    +getPlatform()
}

class DoPaymentTask{
    +DoPayment()
    +passOrg(org)
}

class Platform{
    +getRegisterFreelancer()
}

class Organization{
    +getTaskList()
    +getRTrans()
}

class RegisterFreelancer{
    +getFreelancerList()
}

class Freelancer{
    +getCountry()
}

class TaskList{
    +getTask(i)
}

class Task{
    +getIsPayed()
    +getCostHour()
    +getTimeDuration()
}

class RegisterTransaction{
    +getTransactions()
}

class Transaction {
    +getFreelancer()
    +getTask()
}

class CurrencyConverter{
    +convertToCurrency(sum, country)
}

class Writer{
    +writeOrg(org, sum)
    +generateReceipt(nltr, sum, curr)
}

DoPaymentTask ..> ApplicationPOT
DoPaymentTask ..> Platform
DoPaymentTask ..> Organization
Platform "1" -- "1" RegisterFreelancer : has
RegisterFreelancer "1" -- "1..*" Freelancer : has
Organization "1" -- "1" TaskList : has
TaskList "1" -- "1..*" Task : has
Platform "1" -- "1..*" Organization : has
Organization "1" -- "1..*" RegisterTransaction : has
RegisterTransaction "1" -- "1..*" Transaction : has
DoPaymentTask ..> RegisterFreelancer
DoPaymentTask ..> Task
DoPaymentTask ..> RegisterTransaction
DoPaymentTask ..> Transaction
DoPaymentTask ..> Freelancer
DoPaymentTask ..> Writer
DoPaymentTask ..> CurrencyConverter

@enduml